--- a/README.me
+++ b/README.me
@@ -5,5 +5,5 @@ https://www.w3schools.com/jsref/prop_text_value.asp -adding value
 https://www.w3schools.com/tags/att_input_type_checkbox.asp -  checkbox input
 https://www.w3schools.com/js/js_random.asp - math random 
 
-github link-
+github link- https://github.com/Kbowen2001/PasswordGenerator
 pages link- 
