--- a/README.me
+++ b/README.me
@@ -6,4 +6,4 @@ https://www.w3schools.com/tags/att_input_type_checkbox.asp -  checkbox input
 https://www.w3schools.com/js/js_random.asp - math random 
 
 github link- https://github.com/Kbowen2001/PasswordGenerator
-pages link- 
+pages link- https://kbowen2001.github.io/PasswordGenerator/ 
